tests/ui/macros/macro-attr-feature-gate-cross-crate.stderr
error[E0658]: `macro_rules!` attributes are unstable
  --> $DIR/macro-attr-feature-gate-cross-crate.rs:6:1
   |
LL | #[foo::identity]
   | ^^^^^^^^^^^^^^^^
   |
   = note: see issue #143547 <https://github.com/rust-lang/rust/issues/143547> for more information
   = help: add `#![feature(macro_attr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
